[package]
name = "etl-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

clap = { version = "4", features = ["derive"] }

indicatif = "0.17"

polars = { version = "0.39", features = [
    "lazy",     # LazyFrame, LazyCsvReader, etc.
    "csv",      # CsvReader / CsvWriter
    "json",     # JsonReader / JsonWriter
    "parquet",  # ParquetReader / ParquetWriter
    "sql"       # SQLContext for the query command
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1"
